dropdown alignment fix

--- a/css/styles.less
+++ b/css/styles.less
@@ -470,12 +470,10 @@ p {
                 &:hover {color: @accent;}
             }
         }
-        .info {
-            .info-button {
-                position: absolute;
-                top: 5px;
-                right: 10px;
-            }
+        .tooltip-menu {
+            position: absolute;
+            top: 5px;
+            right: 10px;
         }
         ul {
             li {
